syntax = "proto3";
package Msg;

message RoutingHead {
  optional uint64 fromUin = 1;
  optional string fromUid = 2;
  optional uint32 fromAppid = 3;
  optional uint32 fromInstid = 4;
  optional uint64 toUin = 5;
  optional string toUid = 6;
  optional C2c c2c = 7;
  optional Group group = 8;
}

message C2c {
  optional string friendName = 6;
}

message Group {
  optional uint64 groupCode = 1;
  optional uint32 groupType = 2;
  optional uint64 groupInfoSeq = 3;
  optional string groupCard = 4;
  optional uint32 groupCardType = 5;
  optional uint32 groupLevel = 6;
  optional string groupName = 7;
  optional string extGroupKeyInfo = 8;
  optional uint32 msgFlag = 9;
}

message ContentHead {
  optional uint64 msgType = 1;
  optional uint64 subType = 2;
  optional uint32 c2cCmd = 3;
  optional uint64 random = 4;
  optional uint64 msgSeq = 5;
  optional uint64 msgTime = 6;
  optional uint32 pkgNum = 7;
  optional uint32 pkgIndex = 8;
  optional uint32 divSeq = 9;
  optional uint32 autoReply = 10;
  optional uint64 ntMsgSeq = 11;
  optional uint64 msgUid = 12;
  optional ContentHeadField15 field15 = 15;
}

message ContentHeadField15 {
  optional uint32 field1 = 1;
  optional uint32 field2 = 2;
  optional uint32 field3 = 3;
  optional string field4 = 4;
  optional string field5 = 5;
}

message Message {
  optional RoutingHead routingHead = 1;
  optional ContentHead contentHead = 2;
  optional MessageBody body = 3;
}

message MessageBody {
  optional RichText richText = 1;
  optional bytes msgContent = 2;
  optional bytes msgEncryptContent = 3;
}

message RichText {
  optional Attr attr = 1;
  repeated Elem elems = 2;
}

message Elem {
  optional Text text = 1;
  optional Face face = 2;
  optional LightAppElem lightApp = 51;
  optional CommonElem commonElem = 53;
}

message Text {
  optional string str = 1;
  optional string link = 2;
  optional bytes attr6Buf = 3;
  optional bytes attr7Buf = 4;
  optional bytes buf = 11;
  optional bytes pbReserve = 12;
}

message Face {
  optional uint32 index = 1;
  optional bytes old = 2;
  optional bytes buf = 11;
}

message LightAppElem {
  optional bytes data = 1;
  optional bytes msgResid = 2;
}

message CommonElem {
  required uint32 serviceType = 1;
  optional bytes pbElem = 2;
  optional uint32 businessType = 3;
}

message Attr {
  optional int32 codePage = 1;
  optional int32 time = 2;
  optional int32 random = 3;
  optional int32 color = 4;
  optional int32 size = 5;
  optional int32 effect = 6;
  optional int32 charSet = 7;
  optional int32 pitchAndFamily = 8;
  optional string fontName = 9;
  optional bytes reserveData = 10;
}

message MarkdownElem {
  string content = 1;
}

message PbMultiMsgItem {
  string fileName = 1;
  PbMultiMsgNew buffer = 2;
}

message PbMultiMsgNew {
  repeated Message msg = 1;
}

message PbMultiMsgTransmit {
  repeated Message msg = 1;
  repeated PbMultiMsgItem pbItemList = 2;
}
